2014/06/23 (1.2.20)
- New CLI command: ardj replaygain scan.

2014/06/20 (1.2.19)
- Removed useless sticky label debug logging.
- Changed label prefix from @ to a more convenient #.
- Fixed track skipping with ices.
- New CLI command: ardj skip.
- Monitor now checks children every 1 second, not 5.
- Fixed 'tags' output when there aren't any tags.
- New CLI command: ardj reload.
- Listener counter no longer needs admin access to icecast2.
- Can now run ices from source tree without preparing PYTHONPATH.

2014/06/19 (1.2.15)
- New command: ardj jabber probe.
- Added back support for ices0, because of crossfade and ReplayGain.
- Enable logging from within bin/ardj.
- Better support for running from within the source tree.
- Fixed the status command failing on new databases.
- Replaced the incoming_labels setting with default_labels.
- Added default_labels to default config.
- Pick a totally random track from the database when all other
  strategies fail (e.g., incorrect playlist file).

2014/06/09 (1.2.12)
- Using VirtualEnv for local development and testing.
- No longer installing system-wide config files (in /etc).
- Fixed broken dependencies.
- Removed manual handling of files uploaded via XMPP.
- New, faster CLI.
- Subprocess monitor names log files on child errors.
- Initialize database when running the server.
- Added missing scripts to setup.py.
- Fixed install paths in setup.py.
- Only run scrobbler and jabber if configured.
- New command: ardj tracks export-csv.
- Support for built-in failure audio file.

2013/09/30 (1.2.2)
- Fix permissions on config files during component startup.

2013/09/30 (1.2.1)
- Simpler error messages when there's no config file.
- Better autoconfiguration.
- Process monitor now prints pids.
- Kill subprocesses on ^C with SIGKILL instead of SIGTERM.
- Fixed an error in ardj print-next-track, which made ezstream
  crash instead of playing pre-packaged audio samples.
- More messages to guide through the initial setup.
