@@ -1,6 +1,10 @@
 Очень желательно
 ================
 
+- Отправка HTML писем, настраиваемые шаблоны (например, при запросе токена).
+- Научить ardj replaygain scan проверять наличие mp3gain.
+- Научить jabber обрабатывать типовые ошибки подключения, вроде not-authorized (не тот пароль)
+- Обновлять тэги из файла перед проигрыванием.
 - Научить обработчики команд из ardj.console возвращать несколько сообщений,
   часть из них слать в чат.
 - Добавить в help информацию о конференции и last.fm.
